--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.1.0</version>
-        <!--<configuration>
+        <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
+            <suiteXmlFile>src/test/resources/TestSuites/AllTests.xml</suiteXmlFile>
           </suiteXmlFiles>
-        </configuration>-->
+        </configuration>
       </plugin>
     </plugins>
   </build>
